# Reduced-Order-Particle-Flow

./: .gitignore  README.md  RESULTS.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: _bootstrap.py  generate_dataset.py  make_figures.py  make_gifs.py  run_baselines.py  run_diagnostics.py  train_autoencoder.py  train_forecaster.py
src/ropf/: __init__.py  baselines.py  carrier_flow.py  concentration.py  config.py  dataset.py  diagnostics.py  metrics.py  models.py  particles.py  simulation.py  torch_data.py  train.py  viz.py
tests/: test_models.py  test_physics.py
